# logiq

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: Bases.md  Operators.md  Quantum_state_creations.md  TODOs.md  Uses_of_logiq.md  numpy_integration.md
docs/Examples/: Deutsch–Jozsa.md  Examples_list.md  cat.md  sdc.md
examples/: Deutsch_Jozsa.py  grover.py  superdense-coding.py
logiq/: __init__.py
logiq/creations/: __init__.py  algorithms.py  protocols.py
logiq/src/: Basis.py  Operator.py  Qbits.py  Qmath.py  Qstate.py  qtils.py
src/: Qbit.py  Qerrors.py  Qmath.py  qtils.py
src/logiq/: Basis.py  Operator.py  Qbit.py  Qbits.py  Qerrors.py  Qmath.py  Qstate.py  abs_Qstate.py  qtils.py
